Last Gasp updates

--- a/Blackthorne/Blackthorne.html
+++ b/Blackthorne/Blackthorne.html
@@ -64,7 +64,7 @@ Titles
 <li>Jack Hunter (1987)
 <li>Jax and the Hellhound (1986)
 <li>Labor Force (1986)
-<li>Laffin' Gas (1986)
+<li><a href="../LaffinGas/LaffinGas.html">Laffin' Gas</a> (1986)
 <li>Legion Of Stupid Heroes (1987)
 <li>Mad Dog Magazine (1986)
 <li>Man of Rust (1986)
