--- a/BlueCometPress/BlueCometPress.html
+++ b/BlueCometPress/BlueCometPress.html
@@ -44,20 +44,20 @@
 </p><p>
 Titles
 </p><p>
-<li>Bladesmen   (1990)
-<li>Bladesmen Undersea  (1994)
-<li>Crime-Smasher Special Edition   (1987)
-<li>Deathrow    (1993)
+<li><a href="BCP1.jpg">Bladesmen</a> (1990)
+<li><a href="BCP3.jpg">Bladesmen Undersea</a> (1994)
+<li><a href="BCP4.jpg">Crime-Smasher Special Edition</a> (1987)
+<li><a href="BCP5.jpg">Deathrow</a> (1993)
 <li><a href="../LifeBrigade/LifeBrigade.html">Life Brigade</a>  (1986)
-<li>Outlaw Overdrive    (1995)
-<li>Rollercoasters Special Edition  (1987)
-<li>Rough Raiders   (1988)
-<li>Rough Raiders Annual    (1990)
-<li>Rough Raiders Yearbook  (1994)
-<li>Varmints    (1987)
-<li>Varmints Special    (1990)
-<li>Workshop    (1995)
-<li>Zorann: Star Warrior    (1989)
+<li><a href="BCP6.jpg">Outlaw Overdrive</a> (1995)
+<li><a href="BCP7.jpg">Rollercoasters Special Edition</a> (1987)
+<li><a href="BCP8.jpg">Rough Raiders</a> (1988)
+<li><a href="BCP10.jpg">Rough Raiders Annual</a> (1990)
+<li><a href="BCP11.jpg">Rough Raiders Yearbook</a>  (1994)
+<li><a href="BCP12.jpg">Varmints</a> (1987)
+<li><a href="BCP13.jpg">Varmints Special</a> (1990)
+<li><a href="BCP14.jpg">Workshop</a> (1995)
+<li><a href="BCP15.jpg">Zorann: Star Warrior</a> (1989)
 
 </p>
 
