--- a/PandaKhan/PandaKhan.html
+++ b/PandaKhan/PandaKhan.html
@@ -23,6 +23,7 @@
 <div class="mySlides" style="text-align: center;"><img src="PandaKhan2.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="PandaKhan3.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="PandaKhan4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PandaKhan5.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -32,7 +33,8 @@
 </p><p>
 Li Yang, the Panda Khan is unique in his ties to TMNT lore and a special, though somewhat elusive ally and friend to the Ninja Turtles and Usagi Yojimbo dating back to the very early days of both comic series. The reason for Li Yang’s inclusion into the TMNT Playmates Toys fold aside from creator’s Dave Garcia and Monica Sharp’s friendship and association with Mirage Studios was also that at some point P.K. was to appear in the original TMNT cartoon show. This is very similar to the effect of the deal made with Stan Sakai and the now iconic cross-over history that Usagi Yojimbo and his friends have had with the TMNT.
 </p><p>
-The boy warrior bear and all his spacey pals make some of their first appearances in Colleen Doran’s <a href="../ADistantSoil/ADistantSoil.html">A Distant Soil</a> #6-9 in 1985, WaRP Graphics Annual #1 (1986), Laffin' Gas # 5 &amp; 8 (1987), Equine the Uncivilized #6 (1989), Varmints Special #1 (1990), Usagi Yojimbo (Vol. 1) #21 &amp; 34 (1990, 1992), Panda Khan Special # 1 (1990), Airlock #3 (1992).
+The boy warrior bear and all his spacey pals make some of their first appearances in Colleen Doran’s <a href="../ADistantSoil/ADistantSoil.html">A Distant Soil</a> #6-9 in 1985, <a href="../WarpGraphics/Warp12.jpg">WaRP Graphics Annual #1</a> (1986), <a href="../LaffinGas/LaffinGas.html">Laffin' Gas</a> # 5 &amp; 8 (1987), Equine the Uncivilized #6 (1989), 
+<a href="../BlueCometPress/BCP13.jpg">Varmints Special #1</a> (1990), <a href="../UsagiYojimbo/UsagiYojimbo.html">Usagi Yojimbo</a> #21 &amp; 34 (1990, 1992), <a href="PandaKhan5.jpg">Panda Khan Special # 1</a> (1990), <a href="../Airlock/Airlock3.jpg">Airlock #3</a> (1992).
 </p>
 
 </body>
