--- a/WarpGraphics/WarpGraphics.html
+++ b/WarpGraphics/WarpGraphics.html
@@ -30,6 +30,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Warp9.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Warp10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Warp11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Warp12.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -44,16 +45,17 @@ Warp was also the original publisher of A Distant Soil by Colleen Doran, until D
 Titles
 </p><p>
 <li><a href="Warp2.jpg">Blood of the Innocent</a> (1986)
-<li><a href="../ADistantSoil/ADistantSoil.html">A Distant Soil (1983)
-<li><a href="Warp4.jpg">Elflord (1997)
+<li><a href="../ADistantSoil/ADistantSoil.html">A Distant Soil</a> (1983)
+<li><a href="Warp4.jpg">Elflord</a> (1997)
 <li><a href="../Elfquest/Elfquest.html">Elfquest</a> (1978)
-<li><a href="Warp5.jpg">FantaSci (1986)
-<li><a href="Warp6.jpg">Hawk and Windblade (1997)
-<li><a href="Warp7.jpg">MythAdventures (1984)
-<li><a href="Warp8.jpg">MythConceptions (1986)
-<li><a href="Warp9.jpg">Return to Centaur (1990)
-<li><a href="Warp10.jpg">Thunderbunny (1985)
-<li><a href="Warp11.jpg">Unicorn Isle (1986)
+<li><a href="Warp5.jpg">FantaSci</a> (1986)
+<li><a href="Warp6.jpg">Hawk and Windblade</a> (1997)
+<li><a href="Warp7.jpg">MythAdventures</a> (1984)
+<li><a href="Warp8.jpg">MythConceptions</a> (1986)
+<li><a href="Warp9.jpg">Return to Centaur</a> (1990)
+<li><a href="Warp10.jpg">Thunderbunny</a> (1985)
+<li><a href="Warp11.jpg">Unicorn Isle</a> (1986)
+<li><a href="Warp12.jpg">Warp Graphics Annual</a> (1986)
 </p>
 
 </body>
