--- a/index.html
+++ b/index.html
@@ -1131,6 +1131,13 @@
 </tr>
 
 <tr>
+<td>Airlock</td>
+<td>1991</td>
+<td>Eclectus</td>
+<td><a href="Airlock/Airlock.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Airtight Garage</td>
 <td>1987</td>
 <td>Marvel</td>
@@ -4430,6 +4437,13 @@
 <td>1983</td>
 <td>Marvel</td>
 <td><a href="CloakDagger/CloakDagger.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cocaine Comix</td>
+<td>1975</td>
+<td>Last Gasp</td>
+<td><a href="CocaineComix/CocaineComix.html">Details</a></td>
 </tr>
 
 <tr>
@@ -10405,6 +10419,13 @@
 <td>1986</td>
 <td>Marvel</td>
 <td><a href="Labyrinth/Labyrinth.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Laffin Gas</td>
+<td>1986</td>
+<td>Blackthrone</td>
+<td><a href="LaffinGas/LaffinGas.html">Details</a></td>
 </tr>
 
 <tr>
