--- a/LastGasp/LastGasp.html
+++ b/LastGasp/LastGasp.html
@@ -22,6 +22,17 @@
 <div class="mySlides" style="text-align: center;"><img src="LastGasp1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="LastGasp2.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="LastGasp3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LastGasp4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LastGasp5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LastGasp6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LastGasp7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LastGasp8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LastGasp9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LastGasp10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LastGasp11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LastGasp12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LastGasp13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LastGasp14.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -33,39 +44,38 @@ Last Gasp no longer publishes "floppy" comics; the company publishes art and pho
 </p><p>
 Comics:
 </p><p>
-<li><a href="LastGasp3.jpg">Adventures of Harold Hedd</a> (2 issues 1972–1973)
-<li><a href="../Anarchy/Anarchy.html">Anarchy Comics</a> (4 issues; 1978–1987)
-<li>Armageddon (3 issues; 1970–1973)
-<li>Binky Brown Meets the Holy Virgin Mary (1972)
-<li>Brain Fantasy (2 issues; May 1972–Jan. 1975)
-<li><a href="../Cherry/Cherry.html">Cherry Poptart</a> (13 issues; 1982–1992)
-<li>Harlan Ellison's Chocolate Alphabet (Aug. 1975)
-<li>Cocaine Comix (4 issues; 1975–1982)
-<li>Dirty Laundry (1974, 1978, 1993)
-<li>Dopin' Dan (3 issues; 1972–1979)
-<li>Dr. Atomic (6 issues; Sept. 1972–Apr. 1981)
-<li>Fresca Zizis (1977)
-<li>Good Girls (6 issues; 1987–1991)
-<li>Grim Wit (2 issues; June–Sept. 1973)
-<li>Horny Biker Slut (13 issues; 1990–1998)
-<li>Hup (4 issues; 1986–1992)
-<li>Inner City Romance (5 issues; 1972–1978)
+<li><a href="LastGasp3.jpg">Adventures of Harold Hedd</a> (1972)
+<li><a href="../Anarchy/Anarchy.html">Anarchy Comics</a> (1978)
+<li><a href="LastGasp5.jpg">Armageddon</a> (1970)
+<li><a href="LastGasp6.jpg">Binky Brown Meets the Holy Virgin Mary</a> (1972)
+<li><a href="LastGasp7.jpg">Brain Fantasy</a> (1972)
+<li><a href="../Cherry/Cherry.html">Cherry Poptart</a> (1982)
+<li><a href="LastGasp8.jpg">Harlan Ellison's Chocolate Alphabet</a> (1975)
+<li><a href="../CocaineComix/CocaineComix.html">Cocaine Comix</a> (1975)
+<li><a href="LastGasp9.jpg">Dirty Laundry</a> (1974)
+<li><a href="LastGasp11.jpg">Dopin' Dan</a> (1972)
+<li><a href="LastGasp12.jpg">Dr. Atomic</a> (1972)
+<li><a href="LastGasp13.jpg">Fresca Zizis</a> (1977)
+<li><a href="LastGasp14.jpg">Grim Wit</a> (1973)
+<li>Horny Biker Slut (1990)
+<li>Hup (1986)
+<li>Inner City Romance (1972)
 <li>It Ain't Me, Babe (July 1970)
-<li>Last Gasp Comix &amp; Stories (5 issues; 1994–1997)
-<li>The Legion of Charlies (Fall 1971) — one-shot by Tom Veitch, Greg Irons, and Dave Sheridan
-<li>Mickey Rat (2 issues; 1980–1982)
-<li>Neurocomics (Mar. 1979)
-<li>Skull (5 issues; 1970–1972)
-<li>Slow Death (11 issues; 1970–1992)
+<li>Last Gasp Comix &amp; Stories (1994)
+<li><a href="LastGasp4.jpg">Legion of Charlies</a> (1971)
+<li>Mickey Rat (1980)
+<li>Neurocomics (1979)
+<li>Skull (1970)
+<li>Slow Death (1970)
 <li>Tales from the Leather Nun (1973)
 <li>Twisted Sisters #1 (1976)
-<li><a href="../Weirdo/Weirdo.html">Weirdo</a> (28 issues; Spring 1981–Summer 1993)
-<li>Wimmen's Comix (10 issues; Spring 1981–Summer 1993)
-<li>Young Lust (5 issues; 1972, 1987–1993)
-<li><a href="../Zap/zap.html">Zap Comix</a> (16 issues; 1982–2005)
+<li><a href="../Weirdo/Weirdo.html">Weirdo</a> (1981)
+<li>Wimmen's Comix (1981)
+<li>Young Lust (1972)
+<li><a href="../Zap/zap.html">Zap Comix</a> (1982)
 <li>Kouno, Fumiyo. Town of Evening Calm, Country of Cherry Blossoms (2004)
 <li>Mizuno, Junko. Pure Trance (2005)
-<li>Nakazawa, Keiji. Barefoot Gen (10 issues, 2004–2010)
+<li>Nakazawa, Keiji. Barefoot Gen (2004)
 </p><p>
 Books:
 </p><p>
