--- a/UsagiYojimbo/UsagiYojimbo.html
+++ b/UsagiYojimbo/UsagiYojimbo.html
@@ -8,10 +8,35 @@
 </head>
 
 <body>
-<img src="UsagiYojimbo.jpg"> <br>
-Series: 16 issues 1993 - 1995<br>
-Publisher: Dark Horse<br>
+<img src="UsagiYojimbo1.jpg">
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="UsagiYojimbo1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="UsagiYojimbo2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="UsagiYojimbo3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="UsagiYojimbo4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="UsagiYojimbo5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="UsagiYojimbo6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="UsagiYojimbo7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="UsagiYojimbo8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="UsagiYojimboMirage1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="UsagiYojimboDH1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="UsagiYojimboIDW1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="UsagiYojimboIDW2.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+38 issues 1987-1993 Fantagraphics, 16 issues 1993-1995 Mirage, 165 issues 1996-2017 Dark Horse, 8 issues 2019-2020 IDW.
+</p><p>
 Usagi Yojimbo ("rabbit bodyguard") is a comic book series created by Stan Sakai. It is set primarily at the beginning of the Edo period of Japanese history and features anthropomorphic animals replacing humans. The main character is a rabbit rōnin, Miyamoto Usagi, whom Sakai based partially on the famous swordsman Miyamoto Musashi. Usagi wanders the land on a musha shugyō (warrior's pilgrimage), occasionally selling his services as a bodyguard.
 </p><p>
 Usagi Yojimbo is heavily influenced by Japanese cinema and has included references to the work of Akira Kurosawa (the title of the series is derived from Kurosawa's 1960 film Yojimbo) and to icons of popular Japanese cinema such as Lone Wolf and Cub, Zatoichi, and Godzilla. 
