--- a/KitchenSinkPress/KitchenSinkPress.html
+++ b/KitchenSinkPress/KitchenSinkPress.html
@@ -33,43 +33,43 @@
 </p><p>
 Kitchen Sink Press was a comic book publishing company founded by Denis Kitchen in 1970. Kitchen Sink Press was a pioneering publisher of underground comics, and was also responsible for numerous republications of classic comic strips in hardcover and softcover volumes. One of their best-known products was the first full reprint of Will Eisner's The Spirit, first in magazine format, then in standard comic book format. The company closed in 1999. 
 </p><p>
-<li><a href="KitchenSinkPress8.jpg">Acid Bath Case</a> (1 issue, 1992)
-<li>Bijou Funnies (4 issues, 1970–1973) — issues #5–8, taking over from the Print Mint)
-<li>Bizarre Sex (10 issues, May 1972–December 1982)
-<li>Comix Book (2 issues, 1976, acquired from Marvel Comics)
-<li>Death Rattle vol. 1 (3 issues, 1972)
-<li>Deep 3D Comix (Summer 1970) — Don Glassford
-<li>Don Dohler's ProJunior (1971) — anthology of ProJunior (created by Don Dohler)
-<li>Dope Comix (5 issues, 1978–1984) — anti-drug anthology
-<li>Home Grown Funnies (January 1971) — Robert Crumb
-<li>Hungry Chuck Biscuits Comics and Stories (1971) — anthology
+<li><a href="KitchenSinkPress8.jpg">Acid Bath Case</a> (1992)
+<li>Bijou Funnies (1970)
+<li>Bizarre Sex (1972)
+<li>Comix Book (1976)
+<li>Death Rattle (1972)
+<li>Deep 3D Comix (1970)
+<li>Don Dohler's ProJunior (1971)
+<li>Dope Comix (1978)
+<li>Home Grown Funnies (1971)
+<li>Hungry Chuck Biscuits Comics and Stories (1971)
 <li><a href="../Madman/Madman.html">Madman</a>
-<li>Mom's Homemade Comics (2 issues, June 1969, Oct. 1972)
-<li>Smile (3 issues, Summer 1970 - Aug. 1972)
-<li>Snarf (15 issues, February 1972 – October 1990)
-<li>Teen-Age Horizons of Shangrila (2 issues, Summer 1970 – November 1972)
-<li>BLAB! (6 issues, #3–8, 1988–1995; later continued by Fantagraphics)
-<li>Border Worlds (7 issues, 1986–1987)
-<li>Death Rattle vol. 2 (18 issues, 1985–1988)
-<li>Gay Comix (5 issues, 1980–1984; later published by Bob Ross)
-<li>Denizens of Deep City (8 issues, 1988–1990) — Doug Potter
-<li>Kings in Disguise (6 issues, 1988–1989)
-<li>Megaton Man (10 issues, 1984–1986; now published by Image Comics)
-<li>Melody (10 issues, 1988–1995; now published by Eros Comix)
-<li><a href="../OmahaTheCatDancer/OmahaTheCatDancer.html">Omaha the Cat Dancer</a> (21 issues, #0–20; 1986–June 1994)
-<li>Steven (8 issues, 1989–1996)
-<li>Will Eisner's Quarterly (8 issues, 1983–1986)
-<li><a href="../XenozoicTales/XenozoicTales.html">Xenozoic Tales</a> (14 issues, 1987–1996)
-<li><a href="../BlackHole/BlackHole.html">Black Hole</a> (4 issues, 1995–1998) (later republished with additional 8 issues by Fantagraphics Books)
-<li><a href="../Cherry/Cherry.html">Cherry</a> (6 issues, #14–19, 1993–1996; taking over from Last Gasp; later published by Cherry Comics)
-<li>The Crow (various original mini-series, 1996–1998)
-<li>Death Rattle vol. 3 (1995–1996)
+<li>Mom's Homemade Comics (1969)
+<li>Smile (1970)
+<li>Snarf (1972)
+<li>Teen-Age Horizons of Shangrila (1970)
+<li>BLAB! (1988)
+<li>Border Worlds (1986)
+<li>Death Rattle (1985)
+<li>Gay Comix (1980)
+<li>Denizens of Deep City (1988)
+<li>Kings in Disguise (1988)
+<li>Megaton Man (1984)
+<li>Melody (1988)
+<li><a href="../OmahaTheCatDancer/OmahaTheCatDancer.html">Omaha the Cat Dancer</a> (1986)
+<li>Steven (1989)
+<li>Will Eisner's Quarterly (1983)
+<li><a href="../XenozoicTales/XenozoicTales.html">Xenozoic Tales</a> (1987)
+<li><a href="../BlackHole/BlackHole.html">Black Hole</a> (1995)
+<li><a href="../Cherry/Cherry.html">Cherry</a> (1993)
+<li><a href="../Crow/Crow.html">Crow</a> (1996)
+<li>Death Rattle vol. 3 (1995)
 <li><a href="../FromHell/FromHell.html">From Hell</a> (1998) 
-<li>Grateful Dead Comix (1991–1993)
+<li>Grateful Dead Comix (1991)
 <li>Illegal Alien (1994)
 <li>Life on Another Planet (1996)
-<li><a href="../Spirit/Spirit.html">The Spirit: The New Adventures</a> (8 issues, 1998)
-<li>Twisted Sisters (4 issues, 1994)
+<li><a href="../Spirit/Spirit.html">The Spirit: The New Adventures</a> (1998)
+<li>Twisted Sisters (1994)
 </p>
 </body>
 </html>
