--- a/LastGasp/LastGasp.html
+++ b/LastGasp/LastGasp.html
@@ -33,12 +33,18 @@
 <div class="mySlides" style="text-align: center;"><img src="LastGasp12.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="LastGasp13.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="LastGasp14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LastGasp15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LastGasp16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LastGasp17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LastGasp18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LastGasp19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LastGasp20.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Last Gasp is a San Francisco-based book publisher with a lowbrow art and counterculture focus. Owned and operated by Ron Turner, for most of its existence Last Gasp was a publisher, distributor, and wholesaler of underground comix and books of all types, established in 1970. Although the company came onto the scene a bit later than some of the other underground publishers, Last Gasp continued publishing comix far longer most of its competitors. In addition to publishing notable original titles like Slow Death, Wimmen's Comix, Binky Brown Meets the Holy Virgin Mary, and Weirdo, it also picked up the publishing reins of important titles — such as Zap Comix and Young Lust — from rivals that had gone out of business.
+<a href="http://lastgasp.com/">Last Gasp</a> is a San Francisco-based book publisher with a lowbrow art and counterculture focus. Owned and operated by Ron Turner, for most of its existence Last Gasp was a publisher, distributor, and wholesaler of underground comix and books of all types, established in 1970. Although the company came onto the scene a bit later than some of the other underground publishers, Last Gasp continued publishing comix far longer most of its competitors. In addition to publishing notable original titles like Slow Death, Wimmen's Comix, Binky Brown Meets the Holy Virgin Mary, and Weirdo, it also picked up the publishing reins of important titles — such as Zap Comix and Young Lust — from rivals that had gone out of business.
 </p><p>
 Last Gasp no longer publishes "floppy" comics; the company publishes art and photography books, graphic novels, fiction, and poetry, producing 10-15 new titles per year. In the early 1980s Last Gasp published some of the first books about the West Coast punk rock scene, including a number of titles by Peter Belsito. 
 </p><p>
@@ -57,38 +63,36 @@ Comics:
 <li><a href="LastGasp12.jpg">Dr. Atomic</a> (1972)
 <li><a href="LastGasp13.jpg">Fresca Zizis</a> (1977)
 <li><a href="LastGasp14.jpg">Grim Wit</a> (1973)
-<li>Horny Biker Slut (1990)
-<li>Hup (1986)
-<li>Inner City Romance (1972)
-<li>It Ain't Me, Babe (July 1970)
-<li>Last Gasp Comix &amp; Stories (1994)
+<li><a href="LastGasp16.jpg">Horny Biker Slut</a> (1990)
+<li><a href="LastGasp17.jpg">Hup</a> (1986)
+<li><a href="LastGasp18.jpg">It Ain't Me, Babe</a> (1970)
+<li><a href="LastGasp19.jpg">Last Gasp Comix &amp; Stories</a> (1994)
 <li><a href="LastGasp4.jpg">Legion of Charlies</a> (1971)
-<li>Mickey Rat (1980)
-<li>Neurocomics (1979)
-<li>Skull (1970)
-<li>Slow Death (1970)
-<li>Tales from the Leather Nun (1973)
-<li>Twisted Sisters #1 (1976)
+<li><a href="LastGasp20.jpg">Mickey Rat</a> (1980)
+<li><a href="LastGasp21.jpg">Skull</a> (1970)
+<li><a href="../SlowDeath/SlowDeath.html">Slow Death</a> (1970)
+<li><a href="LastGasp22.jpg">Tales from the Leather Nun</a> (1973)
+<li><a href="LastGasp23.jpg">Twisted Sisters</a>(1976)
 <li><a href="../Weirdo/Weirdo.html">Weirdo</a> (1981)
-<li>Wimmen's Comix (1981)
-<li>Young Lust (1972)
+<li><a href="LastGasp24.jpg">Wimmen's Comix</a> (1981)
+<li><a href="LastGasp25.jpg">Young Lust</a> (1972)
 <li><a href="../Zap/zap.html">Zap Comix</a> (1982)
-<li>Kouno, Fumiyo. Town of Evening Calm, Country of Cherry Blossoms (2004)
-<li>Mizuno, Junko. Pure Trance (2005)
-<li>Nakazawa, Keiji. Barefoot Gen (2004)
+<li><a href="LastGasp26.jpg">Town of Evening Calm, Country of Cherry Blossoms</a> (2004)
+<li><a href="LastGasp27.jpg">Pure Trance</a> (2005)
+<li><a href="../BarefootGen/BarefootGen.html">Barefoot Gen</a> (2004)
 </p><p>
 Books:
 </p><p>
 <li>Belsito, Peter, Bob Davis, and Marian Kester. StreetArt: The Punk Poster in San Francisco 1977-1981 (1981)
 <li>Belsito, Peter and Bob Davis. Hardcore California: A History of Punk and New Wave (1983)
 <li>Belsito, Peter. Notes From the Pop Underground (1985)
-<li>Blank, Joani (ed.) Femalia (2nd ed., 2011)
+<li>Blank, Joani Femalia (2011)
 <li>Cometbus. Despite Everything: A Cometbus Omnibus (2002)
 <li>Corinne, Tee. The Cunt Coloring Book (1989)
 <li>Griffith, Bill. Zippy Stories (1986).
 <li>Fitzgerald, F. Stop and Marian Kester. Dead Kennedys: The Unauthorized Version (1983)
 <li>LeRoy, J. T. with illustrations by Cherry Hood. Labour (2006)
-<li>Perry, Michael with illustrations by Doug Cunningham. Turntable Timmy (paperback re-issue, 2015)
+<li>Perry, Michael with illustrations by Doug Cunningham. Turntable Timmy (2015)
 <li><a href="../ToddSchorr/ToddSchorr.html">Todd Schorr</a> American Surreal (2008) 
 </p>
 
