--- a/KitchenSinkPress/KitchenSinkPress.html
+++ b/KitchenSinkPress/KitchenSinkPress.html
@@ -26,6 +26,12 @@
 <div class="mySlides" style="text-align: center;"><img src="KitchenSinkPress6.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="KitchenSinkPress7.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="KitchenSinkPress8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KitchenSinkPress9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KitchenSinkPress10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KitchenSinkPress11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KitchenSinkPress12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KitchenSinkPress13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KitchenSinkPress14.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -34,42 +40,32 @@
 Kitchen Sink Press was a comic book publishing company founded by Denis Kitchen in 1970. Kitchen Sink Press was a pioneering publisher of underground comics, and was also responsible for numerous republications of classic comic strips in hardcover and softcover volumes. One of their best-known products was the first full reprint of Will Eisner's The Spirit, first in magazine format, then in standard comic book format. The company closed in 1999. 
 </p><p>
 <li><a href="KitchenSinkPress8.jpg">Acid Bath Case</a> (1992)
-<li>Bijou Funnies (1970)
-<li>Bizarre Sex (1972)
-<li>Comix Book (1976)
-<li>Death Rattle (1972)
-<li>Deep 3D Comix (1970)
-<li>Don Dohler's ProJunior (1971)
-<li>Dope Comix (1978)
-<li>Home Grown Funnies (1971)
-<li>Hungry Chuck Biscuits Comics and Stories (1971)
-<li><a href="../Madman/Madman.html">Madman</a>
-<li>Mom's Homemade Comics (1969)
-<li>Smile (1970)
-<li>Snarf (1972)
-<li>Teen-Age Horizons of Shangrila (1970)
-<li>BLAB! (1988)
-<li>Border Worlds (1986)
-<li>Death Rattle (1985)
-<li>Gay Comix (1980)
-<li>Denizens of Deep City (1988)
-<li>Kings in Disguise (1988)
-<li>Megaton Man (1984)
-<li>Melody (1988)
-<li><a href="../OmahaTheCatDancer/OmahaTheCatDancer.html">Omaha the Cat Dancer</a> (1986)
-<li>Steven (1989)
-<li>Will Eisner's Quarterly (1983)
-<li><a href="../XenozoicTales/XenozoicTales.html">Xenozoic Tales</a> (1987)
+<li><a href="KitchenSinkPress9.jpg">Bijou Funnies</a> (1970)
+<li><a href="KitchenSinkPress10.jpg">Bizarre Sex</a> (1972)
+<li><a href="../Blab/Blab.html">BLAB!</a> (1988)
 <li><a href="../BlackHole/BlackHole.html">Black Hole</a> (1995)
+<li><a href="KitchenSinkPress21.jpg">Border Worlds</a> (1986)
 <li><a href="../Cherry/Cherry.html">Cherry</a> (1993)
+<li><a href="../ComixBook/ComixBook.html">Comix Book</a> (1976)
 <li><a href="../Crow/Crow.html">Crow</a> (1996)
-<li>Death Rattle vol. 3 (1995)
-<li><a href="../FromHell/FromHell.html">From Hell</a> (1998) 
-<li>Grateful Dead Comix (1991)
-<li>Illegal Alien (1994)
-<li>Life on Another Planet (1996)
-<li><a href="../Spirit/Spirit.html">The Spirit: The New Adventures</a> (1998)
-<li>Twisted Sisters (1994)
+<li><a href="KitchenSinkPress11.jpg">Death Rattle</a> (1972)
+<li><a href="KitchenSinkPress12.jpg">Deep 3D Comix</a> (1970)
+<li><a href="KitchenSinkPress13.jpg">Don Dohler's ProJunior</a> (1971)
+<li><a href="KitchenSinkPress14.jpg">Dope Comix</a> (1978)
+<li><a href="../FromHell/FromHell.html">From Hell</a> (1998)
+<li><a href="KitchenSinkPress22.jpg">Gay Comix</a> (1980)
+<li><a href="KitchenSinkPress15.jpg">Home Grown Funnies</a> (1971)
+<li><a href="KitchenSinkPress16.jpg">Hungry Chuck Biscuits Comics and Stories</a> (1971)
+<li><a href="../Madman/Madman.html">Madman</a> (1993)
+<li><a href="../MegatonMan/MegatonMan.html">Megaton Man</a> (1984)
+<li><a href="KitchenSinkPress17.jpg">Mom's Homemade Comics</a> (1969)
+<li><a href="../OmahaTheCatDancer/OmahaTheCatDancer.html">Omaha the Cat Dancer</a> (1986)
+<li><a href="KitchenSinkPress18.jpg">Smile</a> (1970)
+<li><a href="KitchenSinkPress19.jpg">Snarf</a> (1972)
+<li><a href="../Spirit/Spirit.html">Spirit: The New Adventures</a> (1998)
+<li><a href="KitchenSinkPress20.jpg">Teen-Age Horizons of Shangrila</a> (1970)
+<li><a href="../XenozoicTales/XenozoicTales.html">Xenozoic Tales</a> (1987)
+<li><a href="KitchenSinkPress5.jpg">XYZ Comics</a> (1972)
 </p>
 </body>
 </html>
