--- a/JackCole/JackCole.html
+++ b/JackCole/JackCole.html
@@ -31,6 +31,10 @@
 <div class="mySlides" style="text-align: center;"><img src="JackCole10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="JackCole11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="JackCole12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JackCole13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JackCole14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JackCole15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JackCole16.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
