--- a/LastGasp/LastGasp.html
+++ b/LastGasp/LastGasp.html
@@ -39,6 +39,13 @@
 <div class="mySlides" style="text-align: center;"><img src="LastGasp18.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="LastGasp19.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="LastGasp20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LastGasp21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LastGasp22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LastGasp23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LastGasp24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LastGasp25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LastGasp26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LastGasp27.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -53,6 +60,7 @@ Comics:
 <li><a href="LastGasp3.jpg">Adventures of Harold Hedd</a> (1972)
 <li><a href="../Anarchy/Anarchy.html">Anarchy Comics</a> (1978)
 <li><a href="LastGasp5.jpg">Armageddon</a> (1970)
+<li><a href="../BarefootGen/BarefootGen.html">Barefoot Gen</a> (2004)
 <li><a href="LastGasp6.jpg">Binky Brown Meets the Holy Virgin Mary</a> (1972)
 <li><a href="LastGasp7.jpg">Brain Fantasy</a> (1972)
 <li><a href="../Cherry/Cherry.html">Cherry Poptart</a> (1982)
@@ -68,18 +76,16 @@ Comics:
 <li><a href="LastGasp18.jpg">It Ain't Me, Babe</a> (1970)
 <li><a href="LastGasp19.jpg">Last Gasp Comix &amp; Stories</a> (1994)
 <li><a href="LastGasp4.jpg">Legion of Charlies</a> (1971)
-<li><a href="LastGasp20.jpg">Mickey Rat</a> (1980)
+<li><a href="LastGasp23.jpg">Mickey Rat</a> (1980)
+<li><a href="LastGasp26.jpg">Pure Trance</a> (2005)
 <li><a href="LastGasp21.jpg">Skull</a> (1970)
 <li><a href="../SlowDeath/SlowDeath.html">Slow Death</a> (1970)
 <li><a href="LastGasp22.jpg">Tales from the Leather Nun</a> (1973)
-<li><a href="LastGasp23.jpg">Twisted Sisters</a>(1976)
+<li><a href="LastGasp27.jpg">Twisted Sisters</a>(1976)
 <li><a href="../Weirdo/Weirdo.html">Weirdo</a> (1981)
 <li><a href="LastGasp24.jpg">Wimmen's Comix</a> (1981)
 <li><a href="LastGasp25.jpg">Young Lust</a> (1972)
 <li><a href="../Zap/zap.html">Zap Comix</a> (1982)
-<li><a href="LastGasp26.jpg">Town of Evening Calm, Country of Cherry Blossoms</a> (2004)
-<li><a href="LastGasp27.jpg">Pure Trance</a> (2005)
-<li><a href="../BarefootGen/BarefootGen.html">Barefoot Gen</a> (2004)
 </p><p>
 Books:
 </p><p>
