--- a/index.html
+++ b/index.html
@@ -607,6 +607,13 @@
 </tr>
 
 <tr>
+<td>Abdo Publishing</td>
+<td>1985</td>
+<td>Publisher</td>
+<td><a href="AbdoPublishing/AbdoPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Abe Sapien</td>
 <td>2013</td>
 <td>Dark Horse</td>
@@ -5847,6 +5854,14 @@
 </tr>
 
 <tr>
+<td>Dick Tracy</td>
+<td>1931</td>
+<td>Tribune</td>
+<td><a href="DickTracy/DickTracy.html">Details</a></td>
+</tr>
+
+
+<tr>
 <td>Die-Cut</td>
 <td>1993</td>
 <td>Marvel</td>
@@ -10076,6 +10091,13 @@
 <td>1897</td>
 <td>King Features</td>
 <td><a href="KatzenjammerKids/KatzenjammerKids.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Keenspot Entertainment</td>
+<td>2000</td>
+<td>Publisher</td>
+<td><a href="Keenspot/Keenspot.html">Details</a></td>
 </tr>
 
 <tr>
