--- a/AdHouse/AdHouse.html
+++ b/AdHouse/AdHouse.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<h1> AdHouse Books</h1
+<b>AdHouse Books</b>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -18,7 +18,15 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=""></div>
+<div class="mySlides" style="text-align: center;"><img src="AdHouse1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../DuncanTheWonderDog/Duncan1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdHouse2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdHouse3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdHouse4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdHouse5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdHouse6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdHouse7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdHouse8.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -32,31 +40,32 @@ AdHouse's first publication, Pulpatoon Pilgrimage, won the 2002 Small Press Expo
 </p><p>
 Titles
 </p><p>
+<li><a href="AdHouse4.jpg">Bumperboy and the Loud, Loud Mountain</a> (2006)
+<li><a href="AdHouse1.jpg">Cankor</a> (2020)
+<li>Collected Sequential (2004)
 <li><a href="../DuncanTheWonderDog/DuncanTheWonderDog.html">Duncan the Wonder Dog</a> (2010)
-<li>Project: Romantic (2006)
-<li>Bumperboy and the Loud, Loud Mountain (2006)
-<li>Noble Boy (2006)
-<li>The Preposterous Adventures of IronHide Tom (2006)
-<li>Project: Superior (2005)
-<li>Mort Grim (2005) by Doug Fraser
-<li>Bumperboy Loses His Marbles (2005)
-<li>Salamander Dream (2005)
-<li>The Collected Sequential (2004)
-<li>Return of the Elephant (2004)
-<li>One Step After Another (2004
 <li>FREE Comic Book Day Comic Book (2004)
-<li>Southpaw (2004)
 <li>Monkey &amp; Spoon (2004) 
-<li>Project: Telstar (2004) 
+<li>Mort Grim (2005) by Doug Fraser
 <li>My Own Little Empire (2003) 
-<li>Pulpatoon Pilgrimage (2002) 
-<li>Skyscrapers of the Midwest (2004) 
-<li>Superior Showcase (2005) 
-<li>Zig Zag (2005)
-<li>The Secret Voice (2005)
+<li>Noble Boy (2006)
+<li>One Step After Another (2004
 <li>Pink, Vol. 1: GRRR! (2004)
 <li>Pink, Vol. 2: Cheese (2004) 
+<li>Preposterous Adventures of IronHide Tom (2006)
 <li>Process Recess (2005)
+<li>Project: Romantic (2006)
+<li>Project: Superior (2005)
+<li>Project: Telstar (2004) 
+<li>Pulpatoon Pilgrimage (2002) 
+<li>Return of the Elephant (2004)
+<li>Salamander Dream (2005)
+<li>Secret Voice (2005)
+<li>Skyscrapers of the Midwest (2004) 
+<li>Southpaw (2004)
+<li><a href="../StreetAngel/StreetAngel.html">Street Angel</a> (2015)
+<li>Superior Showcase (2005) 
+<li>Zig Zag (2005)
 </p>
 
 </body>
