--- a/index.html
+++ b/index.html
@@ -16291,6 +16291,13 @@
 </tr>
 
 <tr>
+<td>Street Angel</td>
+<td>2004</td>
+<td>Slave Labor Graphics</td>
+<td><a href="StreetAngel/StreetAngel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Street Fighter</td>
 <td>1987</td>
 <td>Capcom</td>
