--- a/index.html
+++ b/index.html
@@ -7482,6 +7482,13 @@
 </tr>
 
 <tr>
+<td>Frew Publications</td>
+<td>1948</td>
+<td>Publisher</td>
+<td><a href="FrewPublications/FrewPublications.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Frida Kahlo</td>
 <td>1907</td>
 <td>Creator</td>
@@ -18613,6 +18620,13 @@
 <td>1993</td>
 <td>DC</td>
 <td><a href="Zatanna/Zatanna.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Zebra Face</td>
+<td>2001</td>
+<td>Kid Acne</td>
+<td><a href="ZebraFace/ZebraFace.html">Details</a></td>
 </tr>
 
 <tr>
