--- a/StreetAngel/StreetAngel.html
+++ b/StreetAngel/StreetAngel.html
@@ -28,6 +28,11 @@
 <div class="mySlides" style="text-align: center;"><img src="StreetAngel7.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="StreetAngel8.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="StreetAngel9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="StreetAngel10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="StreetAngel11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="StreetAngel12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="StreetAngel13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="StreetAngel14.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
