--- a/Aquaman/Aquaman.html
+++ b/Aquaman/Aquaman.html
@@ -8,8 +8,7 @@
 </head>
 
 <body>
-<img src="Aquaman1.jpg"> <br>
-63 issues from 1962 - 1978, 77 issues from 1994 - 2001, 39 issues 2003 - 2006, 55 issues from 2011 - 2016, 52 issues 2016 - 2019 by DC
+<img src="Aquaman1.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -31,10 +30,13 @@
 <div class="mySlides" style="text-align: center;"><img src="Aquaman10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Aquaman11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Aquaman12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aquaman13.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
+</p><p>
+63 issues from 1962 - 1978, 77 issues from 1994 - 2001, 39 issues 2003 - 2006, 55 issues from 2011 - 2016, 52 issues 2016 - 2019 by DC. Movie 2018 by Warner Bros.
 </p><p>
 Aquaman (Arthur Curry) is a fictional superhero appearing in American comic books published by DC Comics. Created by Paul Norris and Mort Weisinger, the character debuted in More Fun Comics #73 (November 1941). Initially a backup feature in DC's anthology titles, Aquaman later starred in several volumes of a solo comic book series. During the late 1950s and 1960s superhero-revival period known as the Silver Age, he was a founding member of the Justice League. In the 1990s Modern Age, writers interpreted Aquaman's character more seriously, with storylines depicting the weight of his role as king of Atlantis.
 </p><p>
