--- a/Groo/Groo.html
+++ b/Groo/Groo.html
@@ -6,16 +6,11 @@
 <script src="../slideshow.js"></script>
 <title>Groo</title>
 </head>
+
 <body>
-Groo<br>
-<img src="Groo001.jpg"> <br>
-Creator: Sergio Aragonés<br>
-Series: 1982-1984 PC, 1985-1995 Marvel, 1998-2017 Dark Horse<br>
+
+<img src="Groo001.jpg">
 <p>
-Groo the Wanderer is a fantasy/comedy comic book series written and drawn by Sergio Aragonés, rewritten, co-plotted and edited by Mark Evanier, lettered by Stan Sakai and colored by Tom Luth. Over the years it has been published by Pacific Comics, Eclipse Comics (one special issue), Marvel Comics (under its Epic imprint), Image Comics and Dark Horse Comics.
-</p><p>
-Groo was one of the first widely successful creator-owned comics, one of the few successful humorous comic books in the United States (outside Archie Comics) during its time, and one of the longest-running collaborations in comic book history. In 2011 IGN ranked Groo 100th in the "Top 100 comic books heroes".
-</p><p>
 <div class="row">
 <div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -88,7 +83,13 @@ Groo was one of the first widely successful creator-owned comics, one of the few
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
-</p>
+</p><p>
+Created by <a href="../SergioAragones/SergioAragones.html">Sergio Aragonés</a>, the series ran from 1982-1984 by PC, from 1985-1995 by Marvel, and 1998-2017 by Dark Horse.
+</p><p>
+Groo the Wanderer is a fantasy/comedy comic book series written and drawn by Sergio Aragonés, rewritten, co-plotted and edited by Mark Evanier, lettered by Stan Sakai and colored by Tom Luth. Over the years it has been published by Pacific Comics, Eclipse Comics (one special issue), Marvel Comics (under its Epic imprint), Image Comics and Dark Horse Comics.
+</p><p>
+Groo was one of the first widely successful creator-owned comics, one of the few successful humorous comic books in the United States (outside Archie Comics) during its time, and one of the longest-running collaborations in comic book history. In 2011 IGN ranked Groo 100th in the "Top 100 comic books heroes".
+</p><p>
 Pacific #1-8 (1982-1984):<ul>
 <li><a href="Groo001.html">Groo the Wanderer #1</a></li>
 <li><a href="Groo002.html">Groo the Wanderer #2</a></li>
