--- a/index.html
+++ b/index.html
@@ -1610,6 +1610,13 @@
 </tr>
 
 <tr>
+<td>Alter Ego</td>
+<td>1961</td>
+<td>TwoMorrows Publishing</td>
+<td><a href="AlterEgo/AlterEgo.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Alterna Comics</td>
 <td>2007</td>
 <td>Publisher</td>
@@ -7731,6 +7738,13 @@
 <td>1994</td>
 <td>Disney</td>
 <td><a href="Gargoyles/Gargoyles.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Gary Arlington</td>
+<td>1968</td>
+<td>Creator</td>
+<td><a href="SFCBC/SFCBC.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14811,6 +14825,13 @@
 <td>2004</td>
 <td>Dark Horse</td>
 <td><a href="SamuraiHeavenAndEarth/SamuraiHeavenAndEarth.html">Details</a></td>
+</tr>
+
+<tr>
+<td>San Francisco Comic Book Company</td>
+<td>1968</td>
+<td>Publisher</td>
+<td><a href="SFCBC/SFCBC.html">Details</a></td>
 </tr>
 
 <tr>
