--- a/American/American.html
+++ b/American/American.html
@@ -2,15 +2,40 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>The American</title>
 </head>
 
 <body>
-<img src="American.jpg"> <br>
-4 issues, 1 collection (TPB) 1987-1989 Dark Horse<br>
-Illustrator: Chris Warner, Writer: Mark Verheiden
+<img src="American1.jpg"> <br>
+
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="American1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="American2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="American3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="American4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="American5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="American6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="American7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="American8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="American9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="American10.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+4 issues, 1 collection (TPB) 1987-1989 Dark Horse. Illustrator Chris Warner and Writer Mark Verheiden.
+</p><p>
 Two of the most sought after back issues from Dark Horse are the sold-out The American #1 and #2. Now readers who missed the first two ground-breaking issues, along with all of the other fans in the series, can own the first four issues of Mark Verheiden's The American in a handsome square-bound volume.
 </p><p>
 The American was a black-and-white series from Dark Horse that debuted in 1987. Created and written by Mark Verheiden, it was inspired by an all-but-unknown title by the same name published by Watchfob Comics Group in the early 1960s.
@@ -19,7 +44,9 @@ The American Collection #1 contains all of the art and story from those early is
 </p><p>
 Verheiden’s remake is an intriguing tale of “official super-heroes” and the abuse of power. The American has supposedly been protecting the American beliefs of life, liberty, and the pursuit of happiness for nearly fifty years. However, a news program finds footage and documentation which suggests that the American is a fake and that his fights were all staged. 
 </p><p>
-The report states that the American was simply a propaganda tool used to keep up United States citizens’ morale in hard times. Rumors fly as the U.S. government scrambles to save face and restore faith in the American. One thing is certain: there is much more to this “hero” than the public has been led to believe…
+The report states that the American was simply a propaganda tool used to keep up United States citizens’ morale in hard times. Rumors fly as the U.S. government scrambles to save face and restore faith in the American. One thing is certain: there is much more to this “hero” than the public has been led to believe.
+</p><p>
+The American is the sort of hero who sells his autograph and believes freedom figting is a great merchandizing gimmick. "The American," said Mike Richardson, the publisher of Dark Horse Comics, "is Captain America disilllusioned and without a purpose. He's where Captain America would have ended up if he were allowed to have a life.
 </p>
 
 </body>
