--- a/index.html
+++ b/index.html
@@ -8384,6 +8384,13 @@
 </tr>
 
 <tr>
+<td>Hal Foster</td>
+<td>1892</td>
+<td>Creator</td>
+<td><a href="HalFoster/HalFoster.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Halo</td>
 <td>2001</td>
 <td>Microsoft Studios</td>
@@ -12156,6 +12163,13 @@
 <td>1945</td>
 <td>Marvel</td>
 <td><a href="MillieTheModel/MillieTheModel.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Milton Caniff</td>
+<td>1945</td>
+<td>Creator</td>
+<td><a href="MiltonCaniff/MiltonCaniff.html">Details</a></td>
 </tr>
 
 <tr>
