--- a/QualityComics/QualityComics.html
+++ b/QualityComics/QualityComics.html
@@ -8,30 +8,54 @@
 </head>
 
 <body>
-<h1>Quality Comics</h1>
+<b>Quality Comics</b>
+<p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Quality1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quality10.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Quality Comics was an American comic book publishing company which operated from 1937 to 1956 and was a creative, influential force in what historians and fans call the Golden Age of Comic Books.
 </p><p>
 Notable, long-running titles published by Quality include Blackhawk, Feature Comics, G.I. Combat, Heart Throbs, Military Comics, Modern Comics, Plastic Man, Police Comics, Smash Comics, and The Spirit. While most of their titles were published by a company named Comic Magazines, from 1940 onwards all publications bore a logo that included the word "Quality". Notable creators associated with the company included <a href="../JackCole/JackCole.html">Jack Cole</a>, Reed Crandall, Will Eisner, Lou Fine, Gill Fox, Paul Gustavson, Bob Powell, and <a href="../WallyWood/WallyWood.html">Wally Wood</a>. 
 </p><p>
-<li><a href="../AllHumor/AllHumor.html">All Humor Comics</a> #1–17 (1946–1949)
-<li>The Barker #1–15 (1946–1949)
-<li><a href="../Blackhawk/Blackhawk.html">Blackhawk</a> #9–107 (1944–1956)
-<li>Bride's Romance #1–23 (1953–1956)
-<li>Broadway Romances #1–5 (1950)
-<li>Buccaneers #19–27 (1950–1951)
-<li>Buster Bear #1–10 (1953–1955)
-<li>Campus Loves #1–5 (1949–1950)
-<li>Candy #1–64 (1947–1956)
-<li><a href="../CrackComics/CrackComics.html">Crack Comics</a> #1–62 (1940–1949)
-<li>Crack Western #63–84 (1949–1953)
-<li>Diary Loves #2–31 (1949–1953)
-<li><a href="../DollMan/DollMan.html">Doll Man</a> #1–47 (1941–1953)
-<li><a href="../Egbert/Egbert.html">Egbert</a> #1-20 (1946–1950)
-<li>Exotic Romances #22–31 (1955–1956)
-<li>Exploits of Daniel Boone #1–6 (1955)
-<li><a href="../FeatureFunnies/FeatureFunnies.html">Feature Funnies</a> #1–20 (1937–1939)
-<li>Flaming Love #1–6 (1949–1950)
-<li>Forbidden Love #1–4 (1950)
+<li><a href="../AllHumor/AllHumor.html">All Humor Comics</a> (1946)
+<li><a href="Quality1.jpg">The Barker</a> (1946)
+<li><a href="../Blackhawk/Blackhawk.html">Blackhawk</a> (1944)
+<li><a href="Quality2.jpg">Bride's Romance</a> (1953)
+<li><a href="Quality3.jpg">Broadway Romances </a> (1950)
+<li><a href="Quality4.jpg">Buccaneers</a> (1950)
+<li><a href="Quality5.jpg">Buster Bear</a> (1953)
+<li><a href="Quality6.jpg">Campus Loves</a> (1949)
+<li><a href="Quality7.jpg">Candy</a> (1947)
+<li><a href="../CrackComics/CrackComics.html">Crack Comics</a> (1940)
+<li><a href="Quality8.jpg">Crack Western</a> (1949)
+<li>Diary Loves (1949)
+<li><a href="../DollMan/DollMan.html">Doll Man</a> (1941)
+<li><a href="../Egbert/Egbert.html">Egbert</a> (1946)
+<li><a href="Quality9.jpg">Exotic Romances</a> (1955)
+<li><a href="Quality10.jpg">Exploits of Daniel Boone</a> (1955)
+<li><a href="../FeatureFunnies/FeatureFunnies.html">Feature Funnies</a> (1937)
+<li>Flaming Love (1949)
+<li>Forbidden Love (1950)
 <li>Gabby (1953–1954)
 <li>G.I. Combat #1–43 (1952–1956)
 <li>G.I. Sweethearts #32–45 (1953–1955)
