--- a/index.html
+++ b/index.html
@@ -7552,6 +7552,13 @@
 </tr>
 
 <tr>
+<td>Full Circle</td>
+<td>2004</td>
+<td>Publisher</td>
+<td><a href="FullCircle/FullCircle.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Fun Home</td>
 <td>2006</td>
 <td>Houghton Mifflin</td>
@@ -7899,6 +7906,13 @@
 <td>2012</td>
 <td>Vertigo</td>
 <td><a href="GetJiro/GetJiro.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Get Lost</td>
+<td>1954</td>
+<td>Mikeross</td>
+<td><a href="GetLost/GetLost.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16078,6 +16092,13 @@
 <td>1995</td>
 <td>Marvel</td>
 <td><a href="Starjammers/Starjammers.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Stark Future</td>
+<td>1986</td>
+<td>Aircel</td>
+<td><a href="StarkFuture/StarkFuture.html">Details</a></td>
 </tr>
 
 <tr>
