--- a/KitchenSinkPress/KitchenSinkPress.html
+++ b/KitchenSinkPress/KitchenSinkPress.html
@@ -32,6 +32,15 @@
 <div class="mySlides" style="text-align: center;"><img src="KitchenSinkPress12.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="KitchenSinkPress13.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="KitchenSinkPress14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KitchenSinkPress15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KitchenSinkPress16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KitchenSinkPress17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KitchenSinkPress18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KitchenSinkPress19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KitchenSinkPress20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KitchenSinkPress21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KitchenSinkPress22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KitchenSinkPress23.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -44,6 +53,7 @@ Kitchen Sink Press was a comic book publishing company founded by Denis Kitchen 
 <li><a href="KitchenSinkPress10.jpg">Bizarre Sex</a> (1972)
 <li><a href="../Blab/Blab.html">BLAB!</a> (1988)
 <li><a href="../BlackHole/BlackHole.html">Black Hole</a> (1995)
+<li><a href="KitchenSinkPress23.jpg">Blood Club</a> (1992)
 <li><a href="KitchenSinkPress21.jpg">Border Worlds</a> (1986)
 <li><a href="../Cherry/Cherry.html">Cherry</a> (1993)
 <li><a href="../ComixBook/ComixBook.html">Comix Book</a> (1976)
