--- a/Viz/Viz.html
+++ b/Viz/Viz.html
@@ -236,7 +236,7 @@ Titles
 <li>Galaxy Express 999  (1998)
 <li>Gangsta.    (2014)
 <li>Genkaku Picasso     (2010)
-<li>Genocyber   (1993)
+<li><a href="../Genocyber/Genocyber.html">Genocyber</a> (1993)
 <li>Gente   (2010)
 <li>Gentlemen's Alliance †  (2007)
 <li>Gestalt     (2009)
